Renaming all liquid references to elements

--- a/tools/conf/elements1.conf
+++ b/tools/conf/elements1.conf
@@ -15,5 +15,5 @@ initialfreecoins=2100000000000000
 elementsregtest.rpcport=18891
 elementsregtest.port=18893
 
-# Over p2p we will only connect to local other liquidd
+# Over p2p we will only connect to local other elementsd
 elementsregtest.connect=localhost:18892
